--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "source": "https://github.com/satthi/Contents-file"
     },
     "require": {
-        "cakephp/cakephp": "4.0.*",
+        "cakephp/cakephp": "~4.0",
         "ext-gd": "*",
         "aws/aws-sdk-php": "3.*"
     },
