--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "symfony/finder": "5.*"
     },
     "require-dev": {
-        "cakephp/cakephp-codesniffer": "dev-master",
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "*",
+        "cakephp/migrations": "*"
     },
     "autoload": {
         "psr-4": {
