コード整形などの調整

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "*",
-        "cakephp/migrations": "*"
+        "cakephp/migrations": "*",
+        "cakephp/cakephp-codesniffer": "*"
     },
     "autoload": {
         "psr-4": {
